--- a/src/globalStyles.css
+++ b/src/globalStyles.css
@@ -2,4 +2,9 @@ body {
   margin: 0;
   padding: 0;
   background: #99996ddb;
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
